--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "svelte": "^3.52.0",
     "tailwindcss": "^3.2.4",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "daisyui": "^2.41.0"
   }
 }
