--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
-    "daisyui": "^2.41.0"
+    "daisyui": "^2.41.0",
+    "moment": "^2.29.4",
+    "svelte-copy": "^1.3.0",
+    "uuid": "^9.0.0"
   }
 }
